2.2.7.1 less dependencies